0024068: Wrong result done by projection algorithm

Corrected number of nodes needed to create tree in case of BSplineSurface on current master.
Test case for issue CR24068